# asn1scc.IDE

./: .appveyor.yml  .travis.yml  Asn1Acn.json.in  CMakeLists.txt  README.md  acncompletionassist.cpp  acncompletionassist.h  acndocument.cpp  acndocument.h  acneditor.cpp  acneditor.h  acnhighlighter.cpp  acnhighlighter.h  acnproposalsitemsprovider.cpp  acnproposalsitemsprovider.h  asn.xml  asn1acn.cpp  asn1acn.h  asn1acn.json.in  asn1acn.mimetypes.xml  asn1acn.pro  asn1acn.qrc  asn1acn_global.h  asn1acnconstants.h  asn1acneditor.cpp  asn1acneditor.h  asn1acnjsextension.cpp  asn1acnjsextension.h  asn1sccdocumentprocessor.cpp  asn1sccdocumentprocessor.h  asn1sccparseddocumentbuilder.cpp  asn1sccparseddocumentbuilder.h  asn1sccplugin.cpp  asn1sccplugin.h  asn1sccplugin.json.in  asn1sccplugin.pro  asn1sccplugin_global.h  asn1sccpluginconstants.h  asn1sccserviceprovider.cpp  asn1sccserviceprovider.h  (+143 more)
autocompletion/: acnbuiltinsproposalsprovider.cpp  acnbuiltinsproposalsprovider.h  acncompletionassist.cpp  acncompletionassist.h  asnbuiltinsproposalsprovider.cpp  asncompletionassist.cpp  asncompletionassist.h  asnsnippetprovider.cpp  asnsnippetprovider.h  autocompleter.cpp  builtinsproposalsprovider.cpp  builtinsproposalsprovider.h  completionassist.cpp  completionassist.h  completiontypedefs.h  proposalsprovider.cpp  proposalsprovider.h  usertypesproposalsprovider.cpp  usertypesproposalsprovider.h
completion/: acnbuiltinsproposalsprovider.cpp  acnbuiltinsproposalsprovider.h  acncompletionassist.cpp  acncompletionassist.h  acnkeywordproposalsbuilder.cpp  acnkeywordproposalsbuilder.h  acnsnippetprovider.cpp  acnsnippetprovider.h  acnsnippets.cpp  asnbuiltinsproposalsprovider.cpp  asnbuiltinsproposalsprovider.h  asncompletionassist.cpp  asncompletionassist.h  asnkeywordproposalsbuilder.cpp  asnsnippetprovider.cpp  asnsnippetprovider.h  autocompleter.cpp  autocompleter.h  builtinsproposalsprovider.cpp  builtinsproposalsprovider.h  completionassist.cpp  completionassist.h  completiontypedefs.h  importfindingvisitor.cpp  importfindingvisitor.h  keywordproposalsbuilder.cpp  keywordproposalsbuilder.h  proposalsbuilder.cpp  proposalsbuilder.h  proposalsprovider.cpp  proposalsprovider.h  usertypesproposalsbuilder.cpp  usertypesproposalsbuilder.h  usertypesproposalsprovider.cpp  usertypesproposalsprovider.h
data/: builtintype.cpp  builtintype.h  builtintypes.cpp  builtintypes.h  definitions.cpp  definitions.h  errormessage.h  file.cpp  file.h  importedtype.h  labeltype.cpp  labeltype.h  module.cpp  module.h  modules.h  node.cpp  node.h  project.cpp  project.h  root.cpp  root.h  source.cpp  source.h  sourcelocation.h  type.cpp  type.h  typeassignment.cpp  typeassignment.h  typereference.cpp  typereference.h  userdefinedtype.cpp  userdefinedtype.h  visitor.cpp  visitor.h  visitorwithvalue.h
docs/: Troubleshooting.md  building.md  configuration.md  features.md  index.md  troubleshooting.md
generic-highlighter/: acn.xml  asn1.xml
libraries/: metadataparser.cpp  metadataparser.h
model/: childrencountingvisitor.cpp  childrencountingvisitor.h  childreturningvisitor.cpp  childreturningvisitor.h  displayrolevisitor.cpp  displayrolevisitor.h  indexfindingvisitor.cpp  indexfindingvisitor.h  model.cpp  model.h  outlinemodel.cpp  outlinemodel.h  treeviewchildrencountingvisitor.cpp  treeviewchildrencountingvisitor.h
options-pages/: general.cpp  general.h  general.ui  generalwidget.cpp  generalwidget.h  service.cpp  service.h  service.ui  servicewidget.cpp  servicewidget.h
schemas/: asn1-lib-general-schema.json  asn1-lib-module-schema.json  asn1-lib-schema.json
settings/: general.cpp  general.h  service.cpp  service.h  settings.cpp  settings.h
snippets/: acn.xml  asn.xml  asn1.xml
src/: acndocument.cpp  acndocument.h  acneditor.cpp  acneditor.h  asn1acn.cpp  asn1acn.h  asn1acn_global.h  asn1acnbuildstep.cpp  asn1acnbuildstep.h  asn1acnbuildsteprunner.cpp  asn1acnbuildsteprunner.h  asn1acnconstants.h  asn1acnerrorparser.cpp  asn1acnerrorparser.h  asn1acnjsextension.cpp  asn1acnjsextension.h  asn1acnstepscache.cpp  asn1acnstepscache.h  asn1sccdocumentprocessor.cpp  asn1sccdocumentprocessor.h  asn1sccparseddocumentbuilder.cpp  asn1sccparseddocumentbuilder.h  asn1sccserviceprovider.cpp  asn1sccserviceprovider.h  asndocument.cpp  asndocument.h  asneditor.cpp  asneditor.h  astxmlparser.cpp  astxmlparser.h  buildicdstep.cpp  buildicdstep.h  document.cpp  document.h  documentprocessor.h  editor.cpp  editor.h  editoroutline.cpp  editoroutline.h  errormessageparser.cpp  (+55 more)
templates/wizards/projects/asn1acn/: CMakeLists.txt  asn1sccSettings.cmake  configureAsn1SccTarget.cmake  configureAsn1SccTarget.txt  createFilesList.cmake  createFilesList.txt  createSources.pri  createSourcesList.pri  file.pro  generateFromAsn1.pri  handleAsn1AcnBuild.pri  template.acn  template.asn  updateSourcesList.pri  wizard.json
tests/: astxmlparser_tests.cpp  astxmlparser_tests.h  autocompleter_tests.cpp  autocompleter_tests.h  documentprocessor_tests.cpp  documentprocessor_tests.h  documentprocessorstub.cpp  documentprocessorstub.h  errormessageparser_tests.cpp  errormessageparser_tests.h  modeltree_tests.cpp  modeltree_tests.h  modelvalidityguard_tests.cpp  modelvalidityguard_tests.h  networkreply.cpp  networkreply.h  overviewindexupdater_tests.cpp  overviewindexupdater_tests.h  parseddatastorage_tests.cpp  parseddatastorage_tests.h  parseddocumentbuilder_tests.cpp  parseddocumentbuilder_tests.h  parseddocumentbuilderstub.cpp  parseddocumentbuilderstub.h  parsingserviceproviderstub.cpp  parsingserviceproviderstub.h  pathmapper_tests.cpp  pathmapper_tests.h  projectcontenthandler_tests.cpp  projectcontenthandler_tests.h  sanity_test.cpp  sanity_test.h  sourcemapper_tests.cpp  sourcemapper_tests.h  sourcereadermock.cpp  sourcereadermock.h  structuresviewindexupdater_tests.cpp  structuresviewindexupdater_tests.h
travis/: before_install.sh  dist.sh  install.sh  script.sh  setup-env.sh
tree-views/: activatehandler.cpp  activatehandler.h  childrencountingvisitor.cpp  childrencountingvisitor.h  childreturningvisitor.cpp  (+25 more)
(+365 files in other folders)
